Added placeholder for predict() and evaluate()  - in progress

--- a/01-DL-Single_Neuron.ipynb
+++ b/01-DL-Single_Neuron.ipynb
@@ -1197,30 +1197,8 @@
     "        Predict the y labels associated with the X feature input\n",
     "        \"\"\"\n",
     "        \n",
-    "        # Check for errors in the X data\n",
-    "        # NOTE: X can contain 1 or multiple examples\n",
-    "        try:\n",
-    "            # Ensure that the number of x and y examples match\n",
-    "            if a_X_train.shape[0] == a_y_train.shape[0]:\n",
-    "                # Save the number of examples (samples) in the training data\n",
-    "                self.fit_nsamples = a_X_train.shape[0]\n",
-    "                \n",
-    "            # Ensure that at least one feature has been provided\n",
-    "            if a_X_train.shape[1] > 0:\n",
-    "                # Save the number of features in the training data\n",
-    "                self.fit_train_nfeat = a_X_train.shape[1]\n",
-    "                \n",
-    "            else:\n",
-    "                # Create an error message\n",
-    "                err_str  = f\"Error in object {self.__class__.__name__}:\\n\"\n",
-    "                err_str += f\"\\tNumber of training samples different for X vs y\\n\"\n",
-    "                err_str += f\"\\tX_train.shape = {a_X_train.shape}, y_train.shape = {a_y_train.shape}\"\n",
-    "                raise ValueError(err_str)\n",
-    "                            \n",
-    "        except Exception as e:\n",
-    "            # Re-raise the exception that got us here,\n",
-    "            # including any error message passed along\n",
-    "            raise\n",
+    "        # Ensure that the model has already been fitted\n",
+    "        assert self.fit_is_done, \"The model must be fitted before making predictions\"\n",
     "\n",
     "        pass\n",
     "\n",
@@ -1228,10 +1206,18 @@
     "        \"\"\"\n",
     "        Evaluate the model for accuracy\n",
     "        \"\"\"\n",
+    "\n",
     "        pass\n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
