--- a/01-DL-Single_Neuron.ipynb
+++ b/01-DL-Single_Neuron.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,8 +946,6 @@
     "        self.fit_train_accuracy = None\n",
     "\n",
     "        self.eval_is_done = False\n",
-    "\n",
-    "        self.eval_nsamples = None\n",
     "        self.eval_accuracy = None\n",
     "        self.eval_predict_prob = None\n",
     "        \n",
@@ -1200,16 +1198,56 @@
     "        # Ensure that the model has already been fitted\n",
     "        assert self.fit_is_done, \"The model must be fitted before making predictions\"\n",
     "\n",
-    "        pass\n",
+    "        # DEBUG\n",
+    "        DEBUG_LEVEL = 2\n",
+    "        \n",
+    "        # DEBUG\n",
+    "        if DEBUG_LEVEL >=2:\n",
+    "            print(f\"\\nDEBUG: fit() -> After Batch\")\n",
+    "            print(f\"w ~shape: {self.fit_coefficients_w.shape}, w.T ~shape: {self.fit_coefficients_w.T.shape}\")\n",
+    "            print(f\"X ~shape: {a_X_vals.shape}, X.T ~shape: {a_X_vals.T.shape}\")\n",
+    "\n",
+    "        # Calculate the linear equation\n",
+    "        # NOTE: Need the transpose of a_X_vals.T since it is\n",
+    "        #       (examples x features) and we need (features x examples)\n",
+    "        Z = np.dot(w.T, a_X_vals.T) + b\n",
+    "\n",
+    "        if DEBUG_LEVEL >=2:\n",
+    "            print(f\"\\nDEBUG: fit() -> After Linear Equation (Z)\")\n",
+    "            print(f\"Z ~shape{Z.shape}, Z.T ~shape{Z.T.shape}\")\n",
+    "\n",
+    "        # Calculate the output prediction from the sigmoid of the linear function - vectorized: A and Z ~ shape(1,m)\n",
+    "        A = self.sigmoid(Z)\n",
+    "\n",
+    "        if DEBUG_LEVEL >=2:\n",
+    "            print(f\"\\nDEBUG: fit() -> After Activation (A)\")\n",
+    "            print(f\"A ~shape{A.shape}, A.T ~shape{A.T.shape}\")\n",
+    "\n",
+    "        \n",
+    "        # Return the prediction\n",
+    "        return A\n",
     "\n",
     "    def evaluate(self, a_y_predict, a_y_actual):\n",
     "        \"\"\"\n",
     "        Evaluate the model for accuracy\n",
     "        \"\"\"\n",
     "\n",
-    "        pass\n",
+    "        # Perform basic arg checking\n",
+    "        assert a_y_predict.shape == a_y_actual.shape, \"The model must be fitted before making predictions\"\n",
+    "\n",
+    "        # Calculate the accuracy\n",
+    "        # a_y_predict - a_y_actual will be close to 0 when the prediction is correct,\n",
+    "        # and will be close to +/-1 when the prediction is incorrect\n",
+    "        # So to calculate the overall accuracy:\n",
+    "        # * Take the absolute value of (a_y_predict-a_y_actual)\n",
+    "        # * Round the result so that we get either 1.0 or 0.0\n",
+    "        # * Sum up the result so that we have a count of incorrect predictions\n",
+    "        # * Divide the sum by the number of examples\n",
+    "        # * Subtract the result from 1.0 to get the accuracy of the model\n",
+    "        accuracy = 1.0 - ( np.sum(np.round(np.abs(a_y_predict-a_y_actual))) / len(a_y_actual) )\n",
     "    \n",
-    "    "
+    "        # Return the accuracy\n",
+    "        return accuracy"
    ]
   },
   {
@@ -1221,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,12 +1370,12 @@
     "    ax2.set_ylabel(\"Batch Loss\")\n",
     "    ax2.set_title(\"Model Fitting History - Loss\")\n",
     "\n",
-    "    # fig1.savefig(\"docs/10-Figure-Handwriting_Recognition-Model_Fitting_History.png\")"
+    "    fig1.savefig(\"docs/DL-01-Figure-C-Model_Fit_History.png\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 24,
    "metadata": {
     "scrolled": false
    },
@@ -1355,7 +1393,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SingleNode({'fit_is_done': True, 'fit_alpha': 0.001, 'fit_batch_size': 32, 'fit_max_iter': 100, 'fit_n_iter': None, 'fit_nsamples': 60000, 'fit_iterations': 100, 'fit_train_accuracy': None, 'eval_is_done': False, 'eval_nsamples': None, 'eval_accuracy': None, 'eval_predict_prob': None, 'fit_train_nfeat': 784})\n"
+      "SingleNode({'fit_is_done': True, 'fit_alpha': 0.001, 'fit_batch_size': 32, 'fit_max_iter': 100, 'fit_n_iter': None, 'fit_nsamples': 60000, 'fit_iterations': 100, 'fit_train_accuracy': None, 'eval_is_done': False, 'eval_accuracy': None, 'eval_predict_prob': None, 'fit_train_nfeat': 784})\n"
      ]
     }
    ],
@@ -1366,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
