Added One Hidden Layer NN notebook

--- a/02-DL-One_Hidden_Layer_Neural_Network.ipynb
+++ b/02-DL-One_Hidden_Layer_Neural_Network.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Learning Notes - Implementation of a Single Node Neural Network\n",
+    "# Deep Learning Notes - Implementation of a One Hidden Layer Neural Network\n",
     "* Author: Jeffery Brown\n",
     "* Topic: Deep Learning\n",
     "* GitHub Repo: https://github.com/daddyjab/DL_Notes\n"
@@ -161,6 +161,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -169,7 +176,6 @@
     "There are many different types of <b>Activation functions</b>, each with their own characteristics of interest.  These functions are general non-linear.  A linear function has a constant derative, and as a results our optimization algorithm, which depends upon the deratives to change based upon the input values, would not converge as expected.\n",
     "\n",
     "Some selected activation functions:\n",
-    "\n",
     "\n",
     "| Activation Function | Comments | Definition | Derivative |\n",
     "|:-------------------:|:--------:|:-----------:|:---------:|\n",
@@ -183,13 +189,8 @@
     "For this exploration, the Sigmoid $\\sigma$ will be used as the activation function\n",
     "\n",
     "Additional information on activation functions, including [Softmax](https://en.wikipedia.org/wiki/Softmax_function), is available at:\n",
-    "[Comparison of Activation Functions (Wikipedia)](https://en.wikipedia.org/wiki/Activation_function#Comparison_of_activation_functions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[Comparison of Activation Functions (Wikipedia)](https://en.wikipedia.org/wiki/Activation_function#Comparison_of_activation_functions)\n",
+    "\n",
     "<a id='section_loss_and_cost_functions'></a>\n",
     "##  <font color=\"blue\">Loss Function</font>\n",
     "As noted previously, a <b>Loss function</b> $\\mathscr{L}(\\widehat{y},~y)$ quantifies the distance of the prediction $\\widehat{y}$ from the actual label value $y$ for one or more training examples, which is needed to optimize the set of coefficients used by the neuron.\n",
@@ -220,6 +221,35 @@
     "\n",
     "Additional information on loss functions, including [Loss functions for classification](https://en.wikipedia.org/wiki/Loss_functions_for_classification), is available at:\n",
     "[Loss function (Wikipedia)](https://en.wikipedia.org/wiki/Loss_function)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "A_example = np.random.randn(4,3)\n",
+    "B_example = np.sum(A_example, axis = 1, keepdims = True)\n",
+    "C_example = np.sum(A_example, axis = 0, keepdims = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 3) (4, 1) (1, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A_example.shape, B_example.shape, C_example.shape)"
    ]
   },
   {
