Revised iteration handling to reuse examples - next: test it!

--- a/02-DL-Deep_Neural_Network.ipynb
+++ b/02-DL-Deep_Neural_Network.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": 443,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,11 +1153,8 @@
     "        # the training sample size and the batch size\n",
     "        n_iter_target = n_examples_val // batch_size_val\n",
     "        \n",
-    "        # Limit the number of iterations to max_iter\n",
-    "        n_iter_target = min(max_iter_val, n_iter_target)\n",
-    "        \n",
     "        # Set the reporting interval at a power of 10 based upon n_iter_target\n",
-    "        report_interval = np.power(10,np.round(np.log10(n_iter_target),0)-1)\n",
+    "        report_interval = np.power(10,np.round(np.log10(max_iter_val),0)-1)\n",
     "\n",
     "        # Display a progress update\n",
     "        if DEBUG_LEVEL >=2:\n",
@@ -1173,17 +1170,23 @@
     "        self._hist['loss'] = []              # List of Cost/Loss by Iteration\n",
     "        self._hist['accuracy'] = []          # List of Per-Batch Validation Accuracy by Iteration\n",
     "        \n",
-    "        # Loop through the iterations\n",
+    "        # Loop through the iterations until max_iter_val is reached\n",
     "        progress_str = \"\"\n",
-    "        for i in range(n_iter_target):\n",
+    "        for i in range(max_iter_val):\n",
     "            \n",
     "            # Get the batch of fit_batch_size examples for this iteration for X and y\n",
     "            # X_batch: a_X_train has shape (examples, features), so transpose to get (features, examples)\n",
     "            # y_batch: a_y_train has shape (examples, 1), so transpose to get (1, examples)\n",
     "            # POSSIBILITY: Could implement batching using numpy masked arrays\n",
     "            # POSSIBILITY: Could implement batching using a generator function\n",
-    "            X_batch = a_X_train[:, i*batch_size_val : (i+1)*batch_size_val]\n",
-    "            y_batch = a_y_train[:, i*batch_size_val : (i+1)*batch_size_val]\n",
+    "            \n",
+    "            # Create a batch index, with recognization that the total example size is finite\n",
+    "            # NOTE: n_iter_target is the total example size divided by the batch size\n",
+    "            #       Once the index i reaches n_iter_target, succeeding batches will reuse examples\n",
+    "            b_i = i % n_iter_target\n",
+    "            \n",
+    "            X_batch = a_X_train[:, b_i*batch_size_val : (b_i+1)*batch_size_val]\n",
+    "            y_batch = a_y_train[:, b_i*batch_size_val : (b_i+1)*batch_size_val]\n",
     "            \n",
     "            # Propagate forward to calculate for each layer: Z, A\n",
     "            self._propagate_forward(X_batch)\n",
@@ -1200,7 +1203,7 @@
     "                        \n",
     "            # Display a progress update periodically (report_interval is a power of 10)\n",
     "            if (DEBUG_LEVEL >= 1) and (i % report_interval == 0):\n",
-    "                d_text = f\"[{i}]: Cost J(w,b)={cost_val:0.4f}, Batch Accuracy={accuracy_val:0.4f}\"\n",
+    "                d_text = f\"[Iteration: {i} => Batch Index: {b_i}]: Cost J(w,b)={cost_val:0.4f}, Batch Accuracy={accuracy_val:0.4f}\"\n",
     "                print(d_text)\n",
     "                \n",
     "        # Save the number of iterations actually performed\n",
@@ -1208,10 +1211,6 @@
     "            \n",
     "        # Set the flag that fit has been performed\n",
     "        self._config['is_fitted'] = True\n",
-    "\n",
-    "        # Return a string providing the model attributes\n",
-    "        # retval = self.__repr__()\n",
-    "        # return retval\n",
     "        \n",
     "    def predict(self, a_X_vals):\n",
     "        \"\"\"\n",
@@ -1281,21 +1280,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: (5, 3200), y: (1, 3200)\n"
+      "X: (5, 320), y: (1, 320)\n"
      ]
     }
    ],
    "source": [
     "# TRYIT\n",
     "all_layers_temp = [5, 2, 1]\n",
-    "m_temp = 32*100\n",
+    "m_temp = 32*10\n",
     "X_temp = np.random.rand( all_layers_temp[0], m_temp )\n",
     "y_temp = np.random.randint( 0, 2, size = (all_layers_temp[-1], m_temp) )\n",
     "print(f\"X: {X_temp.shape}, y: {y_temp.shape}\")"
@@ -1303,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1311,7 @@
        "Multilayer_NN({'is_configured': True, 'is_fitted': False, 'alpha': None, 'batch_size': None, 'max_iter': None, 'm': None, 'n_x': 5, 'n_y': 1, 'L': 2, 'all_layers': [5, 2, 1]})"
       ]
      },
-     "execution_count": 427,
+     "execution_count": 458,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1324,42 +1323,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]: Cost J(w,b)=0.6931, Batch Accuracy=0.8750\n",
-      "[10]: Cost J(w,b)=0.6928, Batch Accuracy=0.5625\n",
-      "[20]: Cost J(w,b)=0.6926, Batch Accuracy=0.5625\n",
-      "[30]: Cost J(w,b)=0.6933, Batch Accuracy=0.4688\n",
-      "[40]: Cost J(w,b)=0.6935, Batch Accuracy=0.4375\n",
-      "[50]: Cost J(w,b)=0.6932, Batch Accuracy=0.5000\n",
-      "[60]: Cost J(w,b)=0.6928, Batch Accuracy=0.5312\n",
-      "[70]: Cost J(w,b)=0.6928, Batch Accuracy=0.5312\n",
-      "[80]: Cost J(w,b)=0.6934, Batch Accuracy=0.4688\n",
-      "[90]: Cost J(w,b)=0.6918, Batch Accuracy=0.6250\n"
+      "[Iteration: 0 => Batch Index: 0]: Cost J(w,b)=0.6931, Batch Accuracy=0.5938\n",
+      "[Iteration: 1 => Batch Index: 1]: Cost J(w,b)=0.6931, Batch Accuracy=0.5000\n",
+      "[Iteration: 2 => Batch Index: 2]: Cost J(w,b)=0.6932, Batch Accuracy=0.5000\n",
+      "[Iteration: 3 => Batch Index: 3]: Cost J(w,b)=0.6932, Batch Accuracy=0.4688\n",
+      "[Iteration: 4 => Batch Index: 4]: Cost J(w,b)=0.6931, Batch Accuracy=0.5938\n",
+      "[Iteration: 5 => Batch Index: 5]: Cost J(w,b)=0.6931, Batch Accuracy=0.5625\n",
+      "[Iteration: 6 => Batch Index: 6]: Cost J(w,b)=0.6931, Batch Accuracy=0.5625\n",
+      "[Iteration: 7 => Batch Index: 7]: Cost J(w,b)=0.6932, Batch Accuracy=0.4688\n",
+      "[Iteration: 8 => Batch Index: 8]: Cost J(w,b)=0.6933, Batch Accuracy=0.4375\n",
+      "[Iteration: 9 => Batch Index: 9]: Cost J(w,b)=0.6931, Batch Accuracy=0.5000\n",
+      "[Iteration: 10 => Batch Index: 0]: Cost J(w,b)=0.6932, Batch Accuracy=0.4688\n",
+      "[Iteration: 11 => Batch Index: 1]: Cost J(w,b)=0.6931, Batch Accuracy=0.5000\n"
      ]
     }
    ],
    "source": [
-    "abc.fit(X_temp, y_temp, a_batch_size = 32, a_max_iter = 10000)"
+    "abc.fit(X_temp, y_temp, a_batch_size = 32, a_max_iter = 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": 447,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 3200)"
+       "(1, 320)"
       ]
      },
-     "execution_count": 429,
+     "execution_count": 447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,18 +1372,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": 448,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'predict_accuracy': 0.514375,\n",
+       "{'predict_accuracy': 0.5125,\n",
        " 'predict_proba_label_1': 1.0,\n",
        " 'predict_proba_label_0': 0.0}"
       ]
      },
-     "execution_count": 430,
+     "execution_count": 448,
      "metadata": {},
      "output_type": "execute_result"
     }
