--- a/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
+++ b/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
@@ -1059,6 +1059,12 @@
     "     'fit_params': { 'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 150, 'a_optim': 'gd'} },\n",
     "    {'config_params': { 'a_layers': [ ndims, 40, 40, 40, 40, 1 ] },\n",
     "     'fit_params': { 'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 150, 'a_optim': 'gd'} },\n",
+    "    {'config_params': { 'a_layers': [ ndims, 80, 80, 1 ] },\n",
+    "     'fit_params': { 'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 150, 'a_optim': 'gd'} },\n",
+    "    {'config_params': { 'a_layers': [ ndims, 80, 80, 80, 1 ] },\n",
+    "     'fit_params': { 'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 150, 'a_optim': 'gd'} },\n",
+    "    {'config_params': { 'a_layers': [ ndims, 80, 80, 80, 80, 1 ] },\n",
+    "     'fit_params': { 'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 150, 'a_optim': 'gd'} },\n",
     "]\n",
     "\n",
     "# Debug/Check Data\n",
