Starting: Adding regulization to model

--- a/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
+++ b/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
@@ -1294,7 +1294,31 @@
       "[01/05/20 11:49:17 AM] Epoch: 60 => Cost J(w,b)=5.1400, Accuracy=1.0000\n",
       "[01/05/20 11:52:33 AM] Epoch: 70 => Cost J(w,b)=5.1402, Accuracy=1.0000\n",
       "[01/05/20 11:55:47 AM] Epoch: 80 => Cost J(w,b)=5.1404, Accuracy=1.0000\n",
-      "[01/05/20 11:59:02 AM] Epoch: 90 => Cost J(w,b)=5.1405, Accuracy=1.0000\n"
+      "[01/05/20 11:59:02 AM] Epoch: 90 => Cost J(w,b)=5.1405, Accuracy=1.0000\n",
+      "Model Fitted: Multilayer_NN({'is_configured': True, 'is_fitted': True, 'alpha': 0.05, 'lambda': 1.0, 'batch_size': 500, 'max_epochs': 100, 'm': 60000, 'n_x': 784, 'n_y': 1, 'L': 9, 'all_layers': [784, 320, 320, 320, 320, 320, 320, 320, 320, 1], 'optim': 'gd', 'beta1': 0.9, 'beta2': 0.999, 'epsilon': 1e-07})\n",
+      "Prediction Performance using Training Data (60000 examples):\n",
+      "\tAccuracy: 1.0000\n",
+      "\tProbability of Predicting Correctly when Actual Label is Target Digit: 1.0000\n",
+      "\tProbability of Predicting Correctly when Actual Label is Not the Target Digit: 1.0000\n",
+      "\n",
+      "Prediction Performance using Testing Data (10000 examples):\n",
+      "\tAccuracy: 0.9934\n",
+      "\tProbability of Predicting Correctly when Actual Label is Target Digit: 0.9663\n",
+      "\tProbability of Predicting Correctly when Actual Label is Not the Target Digit: 0.9964\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "[Run117888-009] Start Time: 01/05/20 12:02:13 PM ****************************************\n",
+      "Run Config: {'config_params': {'a_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1]}, 'fit_params': {'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 100, 'a_optim': 'gd'}}\n",
+      "Model Configured: Multilayer_NN({'is_configured': True, 'is_fitted': False, 'alpha': None, 'lambda': None, 'batch_size': None, 'max_epochs': None, 'm': None, 'n_x': 784, 'n_y': 1, 'L': 7, 'all_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1]})\n",
+      "\n",
+      "[01/05/20 12:02:13 PM] Starting Model Fitting\n",
+      "[01/05/20 12:04:41 PM] Epoch: 0 => Cost J(w,b)=15.5130, Accuracy=0.9485\n"
      ]
     }
    ],
