Updates to implement regularization and optimizations in back prop and parameter updates

--- a/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
+++ b/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
@@ -1318,7 +1318,10 @@
       "Model Configured: Multilayer_NN({'is_configured': True, 'is_fitted': False, 'alpha': None, 'lambda': None, 'batch_size': None, 'max_epochs': None, 'm': None, 'n_x': 784, 'n_y': 1, 'L': 7, 'all_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1]})\n",
       "\n",
       "[01/05/20 12:02:13 PM] Starting Model Fitting\n",
-      "[01/05/20 12:04:41 PM] Epoch: 0 => Cost J(w,b)=15.5130, Accuracy=0.9485\n"
+      "[01/05/20 12:04:41 PM] Epoch: 0 => Cost J(w,b)=15.5130, Accuracy=0.9485\n",
+      "[01/05/20 12:29:30 PM] Epoch: 10 => Cost J(w,b)=15.3883, Accuracy=0.9967\n",
+      "[01/05/20 12:54:14 PM] Epoch: 20 => Cost J(w,b)=15.3886, Accuracy=0.9986\n",
+      "[01/05/20 01:19:01 PM] Epoch: 30 => Cost J(w,b)=15.3868, Accuracy=1.0000\n"
      ]
     }
    ],
