Output files from run in progress

--- a/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
+++ b/05-DL-Adam_Optimization-Hyperparameter_Tuning.ipynb
@@ -1321,7 +1321,33 @@
       "[01/05/20 12:04:41 PM] Epoch: 0 => Cost J(w,b)=15.5130, Accuracy=0.9485\n",
       "[01/05/20 12:29:30 PM] Epoch: 10 => Cost J(w,b)=15.3883, Accuracy=0.9967\n",
       "[01/05/20 12:54:14 PM] Epoch: 20 => Cost J(w,b)=15.3886, Accuracy=0.9986\n",
-      "[01/05/20 01:19:01 PM] Epoch: 30 => Cost J(w,b)=15.3868, Accuracy=1.0000\n"
+      "[01/05/20 01:19:01 PM] Epoch: 30 => Cost J(w,b)=15.3868, Accuracy=1.0000\n",
+      "[01/05/20 01:43:33 PM] Epoch: 40 => Cost J(w,b)=15.3877, Accuracy=1.0000\n",
+      "[01/05/20 02:07:59 PM] Epoch: 50 => Cost J(w,b)=15.3884, Accuracy=1.0000\n",
+      "[01/05/20 02:32:10 PM] Epoch: 60 => Cost J(w,b)=15.3888, Accuracy=1.0000\n",
+      "[01/05/20 02:56:22 PM] Epoch: 70 => Cost J(w,b)=15.3892, Accuracy=1.0000\n",
+      "[01/05/20 03:20:23 PM] Epoch: 80 => Cost J(w,b)=15.3895, Accuracy=1.0000\n",
+      "[01/05/20 03:44:34 PM] Epoch: 90 => Cost J(w,b)=15.3897, Accuracy=1.0000\n",
+      "Model Fitted: Multilayer_NN({'is_configured': True, 'is_fitted': True, 'alpha': 0.05, 'lambda': 1.0, 'batch_size': 500, 'max_epochs': 100, 'm': 60000, 'n_x': 784, 'n_y': 1, 'L': 7, 'all_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1], 'optim': 'gd', 'beta1': 0.9, 'beta2': 0.999, 'epsilon': 1e-07})\n",
+      "Prediction Performance using Training Data (60000 examples):\n",
+      "\tAccuracy: 1.0000\n",
+      "\tProbability of Predicting Correctly when Actual Label is Target Digit: 1.0000\n",
+      "\tProbability of Predicting Correctly when Actual Label is Not the Target Digit: 1.0000\n",
+      "\n",
+      "Prediction Performance using Testing Data (10000 examples):\n",
+      "\tAccuracy: 0.9947\n",
+      "\tProbability of Predicting Correctly when Actual Label is Target Digit: 0.9683\n",
+      "\tProbability of Predicting Correctly when Actual Label is Not the Target Digit: 0.9977\n",
+      "\n",
+      "\n",
+      "[Run117888-010] Start Time: 01/05/20 04:06:59 PM ****************************************\n",
+      "Run Config: {'config_params': {'a_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1280, 1280, 1]}, 'fit_params': {'a_alpha': 0.05, 'a_lambda': 1.0, 'a_batch_size': 500, 'a_max_epochs': 100, 'a_optim': 'gd'}}\n",
+      "Model Configured: Multilayer_NN({'is_configured': True, 'is_fitted': False, 'alpha': None, 'lambda': None, 'batch_size': None, 'max_epochs': None, 'm': None, 'n_x': 784, 'n_y': 1, 'L': 9, 'all_layers': [784, 1280, 1280, 1280, 1280, 1280, 1280, 1280, 1280, 1]})\n",
+      "\n",
+      "[01/05/20 04:07:00 PM] Starting Model Fitting\n",
+      "[01/05/20 04:10:20 PM] Epoch: 0 => Cost J(w,b)=20.6244, Accuracy=0.9569\n",
+      "[01/05/20 04:43:09 PM] Epoch: 10 => Cost J(w,b)=20.5050, Accuracy=0.9971\n",
+      "[01/05/20 05:16:12 PM] Epoch: 20 => Cost J(w,b)=20.4991, Accuracy=1.0000\n"
      ]
     }
    ],
