Implemented example CNN for MNIST sign recognition

--- a/06-DL-CNN.ipynb
+++ b/06-DL-CNN.ipynb
@@ -286,9 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Train on 60000 samples, validate on 10000 samples\nEpoch 1/12\n60000/60000 [==============================] - 310s 5ms/step - loss: 0.2670 - accuracy: 0.9161 - val_loss: 0.0536 - val_accuracy: 0.9816\nEpoch 2/12\n60000/60000 [==============================] - 302s 5ms/step - loss: 0.0870 - accuracy: 0.9743 - val_loss: 0.0362 - val_accuracy: 0.9876\nEpoch 3/12\n60000/60000 [==============================] - 301s 5ms/step - loss: 0.0679 - accuracy: 0.9798 - val_loss: 0.0354 - val_accuracy: 0.9878\nEpoch 4/12\n60000/60000 [==============================] - 297s 5ms/step - loss: 0.0548 - accuracy: 0.9835 - val_loss: 0.0319 - val_accuracy: 0.9883\nEpoch 5/12\n60000/60000 [==============================] - 296s 5ms/step - loss: 0.0483 - accuracy: 0.9851 - val_loss: 0.0302 - val_accuracy: 0.9897\nEpoch 6/12\n60000/60000 [==============================] - 298s 5ms/step - loss: 0.0425 - accuracy: 0.9872 - val_loss: 0.0277 - val_accuracy: 0.9906\nEpoch 7/12\n60000/60000 [==============================] - 297s 5ms/step - loss: 0.0385 - accuracy: 0.9881 - val_loss: 0.0303 - val_accuracy: 0.9902\nEpoch 8/12\n60000/60000 [==============================] - 304s 5ms/step - loss: 0.0346 - accuracy: 0.9893 - val_loss: 0.0284 - val_accuracy: 0.9907\nEpoch 9/12\n60000/60000 [==============================] - 304s 5ms/step - loss: 0.0325 - accuracy: 0.9896 - val_loss: 0.0274 - val_accuracy: 0.9912\nEpoch 10/12\n60000/60000 [==============================] - 297s 5ms/step - loss: 0.0305 - accuracy: 0.9909 - val_loss: 0.0272 - val_accuracy: 0.9910\nEpoch 11/12\n60000/60000 [==============================] - 300s 5ms/step - loss: 0.0282 - accuracy: 0.9912 - val_loss: 0.0289 - val_accuracy: 0.9908\nEpoch 12/12\n60000/60000 [==============================] - 303s 5ms/step - loss: 0.0288 - accuracy: 0.9910 - val_loss: 0.0266 - val_accuracy: 0.9911\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "<keras.callbacks.callbacks.History at 0x266d64c6148>"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
    "source": [
     "# Fit the model\n",
     "model.fit(x_train, y_train,\n",
@@ -300,14 +314,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Test loss: 0.026564640905756824\nTest accuracy: 0.991100013256073\n"
+    }
+   ],
    "source": [
     "# Evaluate model performance\n",
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Model: \"sequential_1\"\n_________________________________________________________________\nLayer (type)                 Output Shape              Param #   \n=================================================================\nconv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n_________________________________________________________________\nconv2d_2 (Conv2D)            (None, 24, 24, 64)        18496     \n_________________________________________________________________\nmax_pooling2d_1 (MaxPooling2 (None, 12, 12, 64)        0         \n_________________________________________________________________\ndropout_1 (Dropout)          (None, 12, 12, 64)        0         \n_________________________________________________________________\nflatten_1 (Flatten)          (None, 9216)              0         \n_________________________________________________________________\ndense_1 (Dense)              (None, 128)               1179776   \n_________________________________________________________________\ndropout_2 (Dropout)          (None, 128)               0         \n_________________________________________________________________\ndense_2 (Dense)              (None, 10)                1290      \n=================================================================\nTotal params: 1,199,882\nTrainable params: 1,199,882\nNon-trainable params: 0\n_________________________________________________________________\n"
+    }
+   ],
+   "source": [
+    "# Show a summary of the model\n",
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "MODEL_FILEN='mnist_cnn_ex.h5'\n",
+    "# model.save(MODEL_FILEN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load a saved model\n",
+    "MODEL_FILEN='mnist_cnn_ex.h5'\n",
+    "new_model = keras.models.load_model(MODEL_FILEN)"
    ]
   },
   {
